--- a/backend/templates/user_consolidation.html
+++ b/backend/templates/user_consolidation.html
@@ -1,6 +1,6 @@
 <html>
         <head>
-                <meta http-equiv="refresh" content="0;/user_consolidation" />
+                <meta http-equiv="refresh" content="0;{{ url }}" />
         </head>
         <body>
                 redirecting... till end
