--- a/backend/templates/data_consolidation.html
+++ b/backend/templates/data_consolidation.html
@@ -1,13 +1,5 @@
 <html>
-<head>
-  <meta http-equiv="refresh" content="0;url={{ next_url }}"/>
-</head>
 <body>
-  <h3>Update Datastore</h3>
-  <ul>
-    <li>Status: {{ message }}</li>
-    <li>Prev url: {{ url }}</li>
-    <li>click: {{ next_url }}</li>
-  </ul>
+	{{ content }}
 </body>
 </html>
