optimizing message delivery; user update queue

--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -150,7 +150,7 @@ google.load(drawVisualization);
 
                                  <div id="sidebar">
                                          <div class="section">
-                                                 <div class="headline" style=" margin-bottom: 5px"> p><a href="https://addons.mozilla.org/en-US/firefox/addon/13317/" title="Instapaper firefox addon">Instapaper Firefox addon</a></p><a href="https://addons.mozilla.org/en-US/firefox/addon/13317/"><img src="static/images/install_now.png" style="width:139px" alt="Instapaper firefox addon"/></a></div>
+                                                 <div class="headline" style=" margin-bottom: 5px"><a href="https://addons.mozilla.org/en-US/firefox/addon/13317/" title="Instapaper firefox addon">Instapaper Firefox addon</a></p><a href="https://addons.mozilla.org/en-US/firefox/addon/13317/"><img src="static/images/install_now.png" style="width:139px" alt="Instapaper firefox addon"/></a></div>
                                                  <div class="menu_list">
                                                          <p class="menu_header" style=" margin-bottom: 5px;">Domain Stats in last 5 days</p>
                                                          <p class="menu_body_daily" style=" margin-bottom: 5px;">
