--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -17,6 +17,7 @@
 	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
 	<summary>{{ entry.domain }}</summary>
 	<domain>{{ entry.domain }}</domain>
+        <avatar>{{ entry.avatar }}</avatar>
 </entry>
 {% endfor %}
 </feed>
