--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -7,6 +7,9 @@ html, body { height: 100%; }
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { border:0; font-family:inherit; font-size:100%; font-style:inherit; font-weight:inherit; margin:0; outline:0; padding:0; vertical-align:baseline; }
 :focus { outline:0; }
 .avatar {  height: 80px; width: 80px; }
+.avatar img {  height: 80px; width: 80px; }
+.info { padding-bottom:5px; padding-left:5px; vertical-align:top;}
+.social img{  height: 32px; width: 32px; }
 html { font-size:100%; height:100%; margin-bottom:1px; }
 body { repeat fixed 0 0; color:#3a3a3a; font-family:Helvetica, Arial, sans-serif; font-size:14px; line-height:1; }
 ol, ul { list-style:none; }
