--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -6,6 +6,7 @@ html, body { height: 100%; }
    ----------------------------------------------------------------------------------------------------*/
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { border:0; font-family:inherit; font-size:100%; font-style:inherit; font-weight:inherit; margin:0; outline:0; padding:0; vertical-align:baseline; }
 :focus { outline:0; }
+.hotlinks #tweet { font-size: 45px }
 .avatar {  height: 80px; width: 80px; }
 .avatar img {  height: 80px; width: 80px; }
 .info { padding-bottom:5px; padding-left:5px; vertical-align:top;}
@@ -79,6 +80,25 @@ li.social_media{
         margin-left:0;
         margin-right:0;
         margin-top:10px;
+        text-align:center;
+        width:270px;
+}
+div.social_media{
+	-moz-background-clip:border;
+	-moz-background-origin:padding;
+	-moz-background-size:auto auto;
+	background-attachment:scroll;
+	background-color:#EEEEEE;
+	background-image:none;
+	background-position:0 0;
+	background-repeat:repeat;
+        color:#222222;
+        font-size:14px;
+        font-weight:bold;
+        height:170px;
+        line-height:2.7em;
+        margin-left:0;
+        margin-right:0;
         text-align:center;
         width:270px;
 }
